<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pollutedLocsMapsActivity" >

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/reportButton"
            android:layout_width="222dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="#306962"
            android:text="@string/report_pollution"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            map:layout_constraintBottom_toTopOf="@+id/listLinearLayout"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/listLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:padding="-2dp"
            map:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="98dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="30dp"
                android:layout_height="18dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_blue_vertical_line"
                android:drawablePadding="-11dp"
                android:gravity="start|center_vertical"
                android:text="@string/pollution_type_air" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="42dp"
                android:layout_height="18dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_blue_vertical_line"
                android:drawablePadding="-11dp"
                android:gravity="start|center_vertical"
                android:text="@string/pollution_type_water" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="39dp"
                android:layout_height="18dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_blue_vertical_line"
                android:drawablePadding="-11dp"
                android:gravity="start|center_vertical"
                android:text="@string/pollution_type_noise" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="35dp"
                android:layout_height="18dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_blue_vertical_line"
                android:drawablePadding="-11dp"
                android:gravity="start|center_vertical"
                android:text="@string/pollution_type_land" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="43dp"
                android:layout_height="18dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_blue_vertical_line"
                android:drawablePadding="-11dp"
                android:gravity="start|center_vertical"
                android:text="@string/pollution_type_others" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

<!--
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".pollutedLocsMapsActivity" />
    -->
<!--
    https://www.flaticon.com/free-icon/vertical-line_1625#term=vertical%20line&page=1&position=13-->
