<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0AD675"
    tools:context=".formActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="10dp">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/formParentLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/formHeadingRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp">

                    <TextView
                        android:id="@+id/inputDataTitleTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/Input_Data"
                        android:textSize="28sp"
                        android:textStyle="bold|italic" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/formInputsRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Location"
                            android:textSize="@dimen/form_input_name_textview_text_size" />

                        <EditText
                            android:id="@+id/locationET"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="9"
                            android:background="@android:color/white"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:hint="@string/loading_location"
                            android:inputType="textPersonName"
                            android:paddingStart="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="@dimen/form_input_name_textview_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Category"
                            android:textSize="@dimen/form_input_name_textview_text_size" />

                        <Spinner
                            android:id="@+id/categorySpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="@dimen/form_input_name_textview_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Source"
                            android:textSize="@dimen/form_input_name_textview_text_size" />

                        <Spinner
                            android:id="@+id/sourceSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="@dimen/form_input_name_textview_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Extent"
                            android:textSize="@dimen/form_input_name_textview_text_size" />

                        <Spinner
                            android:id="@+id/extentSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2" />

                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/imgRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:fillViewport="true"
                        android:measureAllChildren="false"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/imgLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/setImgIconLL"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="8dp"
                                android:orientation="vertical">

                                <ImageButton
                                    android:id="@+id/imgIB"
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_insert_picture_60dp"
                                    tools:srcCompat="@drawable/ic_insert_picture_60dp" />

                                <TextView
                                    android:id="@+id/setImgIconTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Set Image"
                                    android:textSize="15sp"
                                    android:textStyle="italic" />
                            </LinearLayout>

                        </LinearLayout>
                    </HorizontalScrollView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/audioChooserRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/audioChooserIB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@android:drawable/ic_btn_speak_now" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Add audio"
                            android:textSize="15sp"
                            android:textStyle="italic" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/audioPlayerRL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingEnd="2dp"
                            android:text="Audio:"
                            android:textSize="16sp"
                            android:textStyle="italic" />

                        <ImageButton
                            android:id="@+id/playAudioIB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_media_play" />

                        <ImageButton
                            android:id="@+id/stopAudioIB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_media_pause" />

                        <ImageButton
                            android:id="@+id/resetAudioIB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_menu_revert" />

                        <ImageButton
                            android:id="@+id/removeAudioIB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutUpload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/mProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:indeterminate="true"
                        android:indeterminateTint="#1a09d6"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/mProgressTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Upload : 0%"
                        android:visibility="gone" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/submitButtonRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="14dp">

                    <Button
                        android:id="@+id/submitButton"
                        android:layout_width="300dp"
                        android:layout_height="80dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/rounded_corner_button"
                        android:text="@string/Submit"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
